--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 AsteroidsC++ is a version of the old and famous asteroid game, made in C++ using SFML ( Simple and Fast Multimedia Library ). The copy is not equal to the original game, it is a little different in a few concepts.
 The audio system is ready to work, but is not implemented yet.
+
+Some parts of the code are a mess, one day I will stop being lazy and I'll fix it :)
