--- a/README
+++ b/README
@@ -2,3 +2,5 @@ AsteroidsC++ is a version of the old and famous asteroid game, made in C++ using
 The audio system is ready to work, but is not implemented yet.
 
 Some parts of the code are a mess, one day I will stop being lazy and I'll fix it :)
+
+(I'm currently fixing a lot of things that I didn't like in the code..)
